ci: add java.text open for Groovy 2.5