@@ -54,6 +54,7 @@ test {
             '--add-opens=java.base/java.io=ALL-UNNAMED',
             '--add-opens=java.base/java.net=ALL-UNNAMED',
             '--add-opens=java.base/java.nio=ALL-UNNAMED',
+            '--add-opens=java.base/java.text=ALL-UNNAMED',
             '--add-opens=java.base/java.util=ALL-UNNAMED',
             '--add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED'
     testLogging {
